--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About me</a></li>
-                    <li><a href="links:/https://ayokadev.github.io">Project section</a></li>
-                    <li><a href="whatsappme:https://wa.me/message/UOPVZ5AKUATQP1">Contact</a></li>
+                    <li><a href="https://ayokadev.github.io/Project-section/">Project section</a></li>
+                    <li><a href="https://wa.me/message/UOPVZ5AKUATQP1">Contact</a></li>
                 </ul>
                 <a href="#" class="btn">Your github profile link</a>
             </nav>
